--- a/hot/only.less
+++ b/hot/only.less
@@ -32,3 +32,13 @@
   animation-fill-mode: none;
   animation-play-state: running;
 }
+
+
+/* usage: .transform-translate(100px, 100px); */
+
+.transform-translate(@x:50px, @y:50px) {
+	-webkit-transform: translate(@x, @y);
+	-o-transform: translate(@x, @y);
+	-ms-transform: translate(@x, @y);
+	transform: translate(@x, @y);
+}
