--- a/hot/only.less
+++ b/hot/only.less
@@ -2,6 +2,36 @@
 @textColorMeme: #1A237E;
 @morfAnimationDuration: 1s;
 @atentionAnimationDuration: 0.5s;
+@memeImageWidth: 50%
+@memeImageHeight: 40%
+@memeFontSize: 20px;
+@memeBackgroundColor: #CFD8DC;
+@memeTextColor: #546E7A;
+                
+.memeContainer{
+  width: @memeImageWidth;
+  height: @memeImageHeight;
+}
+
+.meme{
+  font-size: @memeFontSize;
+  background-color: @memeBackgroundColor;
+  color: @memeTextColor;
+}
+
+.paddingLR = {
+    padding-left: 5px;
+    padding-right: 5px;
+    cursor: pointer;
+}
+
+.isHidden{
+  visibility: hidden;
+}
+
+.isVisible{
+  visibility: visible;
+}
 
 .watchMe {
   animation-duration: @atentionAnimationDuration;
