--- a/hot/only.less
+++ b/hot/only.less
@@ -2,16 +2,17 @@
 @textColorMeme: #1A237E;
 @morfAnimationDuration: 1s;
 @atentionAnimationDuration: 0.5s;
-@memeImageWidth: 50%
-@memeImageHeight: 40%
+@memeImageWidth: 50%;
+@memeImageHeight: 40%;
 @memeFontSize: 20px;
 @memeBackgroundColor: #CFD8DC;
 @memeTextColor: #546E7A;
-                
+
 .memeContainer{
   width: @memeImageWidth;
   height: @memeImageHeight;
 }
+
 
 .meme{
   font-size: @memeFontSize;
@@ -19,7 +20,7 @@
   color: @memeTextColor;
 }
 
-.paddingLR = {
+.paddingLR{
     padding-left: 5px;
     padding-right: 5px;
     cursor: pointer;
