--- a/hot/only.less
+++ b/hot/only.less
@@ -6,6 +6,9 @@
 @memeImageHeight: 40%;
 @memeBackgroundColor: #CFD8DC;
 @memeTextColor: #546E7A;
+.Select-value:hover {
+  cursor: pointer;
+}
 .singleWord{
     border-radius: 40%;
     border:solid 2px #4DB6AC;
