--- a/admin/public/css/admin.css
+++ b/admin/public/css/admin.css
@@ -1,3 +1,12 @@
+.unselectedImage {
+  border: solid 1px #4DB6AC;
+  padding: 5px;
+  background-color: #546E7A;
+}
+.selectedImage {
+  padding: 5px;
+  background-color: #FF4081;
+}
 .newEntryContainer {
   border: solid 1px #4DB6AC;
   position: fixed;
