--- a/admin/public/css/admin.less
+++ b/admin/public/css/admin.less
@@ -6,8 +6,18 @@
 @memeImageHeight: 40%;
 @memeBackgroundColor: #CFD8DC;
 @memeTextColor: #546E7A;
+@mildRed: #FF4081;
 .borderTemplate(){
     border:solid 1px #4DB6AC;
+}
+.unselectedImage{
+    .borderTemplate;
+    padding: 5px;
+    background-color: @memeTextColor;
+}
+.selectedImage{
+    padding: 5px;
+    background-color: @mildRed;
 }
 .newEntryContainer{
     .borderTemplate;
@@ -43,7 +53,7 @@ border:solid 1px #4DB6AC !important;
 }
 .singleWordCorrect{
     border-radius: 40%;
-    border:solid 2px #FF4081;
+    border:solid 2px @mildRed;
     border-style:double;
     padding:2px;
     cursor: pointer;
