--- a/admin/public/css/admin.less
+++ b/admin/public/css/admin.less
@@ -10,6 +10,10 @@
 .borderTemplate(){
     border:solid 1px #4DB6AC;
 }
+.borderBottom{
+    border-style: solid;
+    border-bottom: 5px solid @mildRed;
+}
 .unselectedImage{
     .borderTemplate;
     padding: 5px;
