--- a/admin/public/css/admin.less
+++ b/admin/public/css/admin.less
@@ -10,6 +10,16 @@
 .borderTemplate(){
     border:solid 1px #4DB6AC;
 }
+.inputField{
+-webkit-transition: all 0.30s ease-in-out;
+-moz-transition: all 0.30s ease-in-out;
+-ms-transition: all 0.30s ease-in-out;
+-o-transition: all 0.30s ease-in-out;
+outline: none;
+padding: 3px 0px 3px 3px;
+margin: 5px 1px 3px 0px;
+border: 1px solid #DDDDDD;
+}
 .borderBottom{
     border-style: solid;
     border-bottom: 5px solid @mildRed;
