--- a/admin/public/css/admin.css
+++ b/admin/public/css/admin.css
@@ -1,3 +1,14 @@
+.inputField,
+.inputField:focus {
+  text-align: center;
+  font-weight: bold;
+  outline: none;
+  padding: 7px;
+  opacity: 0.5;
+  border-radius: 5%;
+  border: 1px solid #B0BEC5;
+  background: linear-gradient(#B0BEC5, #ffffff 70%, #B0BEC5);
+}
 .borderBottom {
   border-style: solid;
   border-bottom: 5px solid #FF4081;
