--- a/admin/public/css/admin.less
+++ b/admin/public/css/admin.less
@@ -7,18 +7,23 @@
 @memeBackgroundColor: #CFD8DC;
 @memeTextColor: #546E7A;
 @mildRed: #FF4081;
+@learningMemeBackground: #B0BEC5;
 .borderTemplate(){
     border:solid 1px #4DB6AC;
 }
-.inputField{
--webkit-transition: all 0.30s ease-in-out;
--moz-transition: all 0.30s ease-in-out;
--ms-transition: all 0.30s ease-in-out;
--o-transition: all 0.30s ease-in-out;
+.inputField, .inputField:focus{
+//box-shadow: 0px 1px 0px rgba(255,255,255,.25),inset 0px 3px 6px rgba(0,0,0,.25);
+//text-shadow: 0px 1px 2px @mildRed;
+text-align: center;
+font-weight:bold;
+//-webkit-transition: all 0.90s ease-out;
+//transition: all 0.90s ease-out;
 outline: none;
-padding: 3px 0px 3px 3px;
-margin: 5px 1px 3px 0px;
-border: 1px solid #DDDDDD;
+padding: 7px;
+opacity: 0.5;
+border-radius: 5%;
+border: 1px solid @learningMemeBackground;
+background: linear-gradient(@learningMemeBackground, @backgroundMeme 70%, @learningMemeBackground);
 }
 .borderBottom{
     border-style: solid;
