--- a/hapi/public/css/admin.less
+++ b/hapi/public/css/admin.less
@@ -12,6 +12,18 @@
 @correctSecond: #A5D6A7;
 @wrongFirst: #E57373;
 @wrongSecond: #EC407A;
+.searchImageKeyword{
+    background-color: @correctSecond;
+}
+.searchImageKeyword:focus, .deWordInput:focus, enWordInput:focus{
+    background-color: @memeBackgroundColor;
+}
+.deWordInput{
+background-color: #E1F5FE;
+}
+.enWordInput{
+background-color: #FBE9E7;
+}
 .wrongAnswerLearningMeme{
   animation: wrongLearningMeme 1s;
 }
