--- a/admin/public/css/admin.less
+++ b/admin/public/css/admin.less
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Chewy);
 @backgroundMeme: #ffffff;
 @textColorMeme: #1A237E;
 @morfAnimationDuration: 1s;
