--- a/hapi/public/css/admin.css
+++ b/hapi/public/css/admin.css
@@ -1,3 +1,51 @@
+@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:600);
+.icon {
+  margin-right: 5px;
+}
+.firstRow {
+  height: 20px;
+  line-height: 1.5;
+  font-size: 14px;
+  text-overflow: clip;
+  white-space: nowrap;
+  overflow: hidden;
+  color: #212121;
+  font-family: 'Josefin Sans', sans-serif;
+}
+.firstRowOdd {
+  height: 20px;
+  line-height: 1.5;
+  font-size: 14px;
+  text-overflow: clip;
+  white-space: nowrap;
+  overflow: hidden;
+  color: #3a707f;
+  font-family: 'Josefin Sans', sans-serif;
+}
+.secondRow {
+  height: 20px;
+  line-height: 1.5;
+  font-size: 14px;
+  text-overflow: clip;
+  white-space: nowrap;
+  overflow: hidden;
+  color: #424242;
+  background-color: #E0FFF9;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 600;
+}
+.secondRowOdd {
+  height: 20px;
+  line-height: 1.5;
+  font-size: 14px;
+  text-overflow: clip;
+  white-space: nowrap;
+  overflow: hidden;
+  background-color: #F7F3F3;
+  color: #263238;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 600;
+}
 .commonInput {
   padding: 5px;
 }
