--- a/hapi/public/css/admin.less
+++ b/hapi/public/css/admin.less
@@ -17,6 +17,11 @@
 @correctSecond: #A5D6A7;
 @wrongFirst: #E57373;
 @wrongSecond: #EC407A;
+#marginlessTuna{
+    margin: 0 !important;
+    padding: 5px;
+    max-height: 9vh;
+}
 .icon{
     margin-right: 5px;
 }
