--- a/hapi/public/css/blog.less
+++ b/hapi/public/css/blog.less
@@ -1,16 +1,65 @@
 @import "mixins.less";
 @import "common.less";
 @import url(https://fonts.googleapis.com/css?family=Arvo:400&subset=latin);
-
+@import url(https://fonts.googleapis.com/css?family=Roboto+Mono:500&subset=latin);
 @fontFamily: 'Arvo', serif;
-
-.content{
+@headingMargin: 1.5vh;
+@headingPadding: 2.5vw;
+@borderRadius: 1vh;
+code {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 2.5vh;
+    font-weight: 500;
+    white-space : pre;
+    background-color : @darkSecond;
+    line-height: 0.9 !important;
+    color            : @bright;
+}
+hr {
+    height: 1px;
+    border: 0;
+    border-top: 1px solid @darkSecond;
+    border-top-color: @brightSecond;
+    margin: 2vh 0;
+}
+.headerBlog{
+    border-radius: @borderRadius;
+    padding: 1.1vh;
+    margin-bottom: @headingMargin !important;
+}
+.blog{
     font-family: @fontFamily;
     margin-left: 2vw;
     margin-top: 1vw;
-    margin-right: 2vw;
     padding: 0.5vw;
-    width:46vw;
-    border: 1px solid @darkblue;
-    font-size: 1.7vh;
+    width:95vw;
+    border-radius: @borderRadius;
+    font-size: 2.3vh;
+}
+.blog img{
+display: block;
+margin: 0 auto;
+}
+.blog p{
+    margin-bottom: 1vh;
+}
+h1{
+    font-size: 3.9vh !important;
+}
+.headingTemplate(){
+padding-left: @headingPadding;
+margin-top: @headingMargin;
+margin-bottom: @headingMargin;
+}
+h2{
+    font-size: 3.4vh !important;
+    .headingTemplate();
+}
+h3{
+    font-size: 2.7vh !important;
+    .headingTemplate();
+}
+h4{
+    font-size: 2.2vh !important;
+    .headingTemplate();
 }
